# .swagger/swagger.json
@@ -268,7 +268,7 @@
                     {
                         "type": "integer",
                         "default": 10,
-                        "description": "Page size",
+                        "description": "Page size, capped at 100",
                         "name": "limit",
                         "in": "query"
                     }
@@ -279,7 +279,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/response.PaginatedResponse"
+                                    "$ref": "#/definitions/response.BaseResponse"
                                 },
                                 {
                                     "type": "object",
@@ -289,6 +289,9 @@
                                             "items": {
                                                 "$ref": "#/definitions/dtoresponse.BarResponse"
                                             }
+                                        },
+                                        "meta": {
+                                            "$ref": "#/definitions/response.Meta"
                                         }
                                     }
                                 }
@@ -869,31 +872,32 @@
         "response.Meta": {
             "type": "object",
             "properties": {
+                "hasNext": {
+                    "type": "boolean"
+                },
+                "hasPrev": {
+                    "type": "boolean"
+                },
+                "limit": {
+                    "type": "integer"
+                },
                 "message": {
                     "type": "string"
                 },
-                "request_id": {
+                "page": {
+                    "type": "integer"
+                },
+                "requestId": {
                     "type": "string"
                 },
                 "timestamp": {
                     "type": "string"
-                }
-            }
-        },
-        "response.PaginatedResponse": {
-            "type": "object",
-            "properties": {
-                "data": {},
-                "errors": {},
-                "message": {
-                    "type": "string"
                 },
-                "meta": {
-                    "$ref": "#/definitions/response.Meta"
+                "total": {
+                    "type": "integer"
                 },
-                "pagination": {},
-                "success": {
-                    "type": "boolean"
+                "totalPages": {
+                    "type": "integer"
                 }
             }
         }
